---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 07. 10. 2023
  Bugfixes:
    - Biters should not get stuck for a long time anymore.
  Balancing:
    - By popular demand: halved respawn times. Now it's 1/120th of the current game length. Not that I agree with that change but sometimes one needs to surrender to the masses...
  Features:
    - You can now have players joining mid-game with tournament mode on. You can disable this feature by selecting "Lock Teams" checkbox before the start of the game.
---------------------------------------------------------------------------------------------------
Version: 0.4.9
Date: 04. 10. 2023
  Balancing:
    - Red ammo damage: 10 -> 9
    - Free resource period increased: 45 minutes -> 60 minutes
---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: 25. 09. 2023
  Bugfixes:
    - Tried to reduce the likehood of biters getting stuck, also more than doubled the frequency at which they are forcibly unstuck.
    - Fixed that exactly 8 biter staging areas... weren't biter staging areas.
---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: 23. 09. 2023
  Balancing:
    - Nerfed various aspects of flamethrower damage, overall nerf should be about 33%.
    - Increased flamethrower fluid consumption by 50%.
    - Increased the average amount of water on the maps.
    - Greatly increased the number of cliffs and their continuity.
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 22. 09. 2023
  Bugfixes:
    - Fixed a rare crash at game end.
  Balancing:
    - Added 50 electric mining drills to the starter pack. 
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 09. 09. 2023
  Bugfixes: